Added jumping functionality

--- a/backend/frontend/src/styles/styles.css
+++ b/backend/frontend/src/styles/styles.css
@@ -114,4 +114,37 @@
   height: 10vh;
   background-color: green;
 }
+
+.player {
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  background-color: grey;
+  bottom: 10%;
+  right: 40%;
+}
+
+@-webkit-keyframes jump {
+  0% {
+    bottom: 10%;
+  }
+  50% {
+    bottom: 40%;
+  }
+  0% {
+    bottom: 10%;
+  }
+}
+
+@keyframes jump {
+  0% {
+    bottom: 10%;
+  }
+  50% {
+    bottom: 40%;
+  }
+  0% {
+    bottom: 10%;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
