--- a/backend/frontend/src/styles/styles.css
+++ b/backend/frontend/src/styles/styles.css
@@ -117,11 +117,16 @@
 
 .player {
   position: fixed;
-  width: 40px;
-  height: 40px;
-  background-color: grey;
-  bottom: 10%;
-  right: 40%;
+  width: 1px;
+  height: 1px;
+  scale: 200;
+  background-image: url("../images/arcade_knight-removebg-preview.png");
+  -o-object-fit: contain;
+     object-fit: contain;
+  background-size: contain;
+  background-repeat: no-repeat;
+  bottom: 8%;
+  left: 10%;
 }
 
 @-webkit-keyframes jump {
@@ -145,6 +150,40 @@
   }
   0% {
     bottom: 10%;
+  }
+}
+
+.enemies {
+  position: fixed;
+  width: 1px;
+  height: 1px;
+  scale: 200;
+  background-image: url("../images/enemy_knight-removebg-preview.png");
+  -o-object-fit: contain;
+     object-fit: contain;
+  background-size: contain;
+  background-repeat: no-repeat;
+  bottom: 8%;
+  right: 0%;
+  -webkit-animation: enemySlide 5s infinite linear;
+          animation: enemySlide 5s infinite linear;
+}
+
+@-webkit-keyframes enemySlide {
+  from {
+    right: 0%;
+  }
+  to {
+    right: 100%;
+  }
+}
+
+@keyframes enemySlide {
+  from {
+    right: 0%;
+  }
+  to {
+    right: 100%;
   }
 }
 /*# sourceMappingURL=styles.css.map */
