--- a/backend/frontend/src/styles/styles.css
+++ b/backend/frontend/src/styles/styles.css
@@ -186,4 +186,80 @@
     right: 100%;
   }
 }
+
+.fireball_one {
+  background-image: url("../images/fireball-removebg-preview.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: fixed;
+  width: 100px;
+  height: 100px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  top: 10%;
+  right: 0%;
+  -webkit-animation: fireball__one 3s linear infinite;
+          animation: fireball__one 3s linear infinite;
+}
+
+@-webkit-keyframes fireball__one {
+  from {
+    top: 10%;
+    right: 0%;
+  }
+  to {
+    top: 85%;
+    right: 60%;
+  }
+}
+
+@keyframes fireball__one {
+  from {
+    top: 10%;
+    right: 0%;
+  }
+  to {
+    top: 85%;
+    right: 60%;
+  }
+}
+
+.fireball_two {
+  background-image: url("../images/fireball-removebg-preview.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: fixed;
+  -webkit-transform: rotate(-40deg);
+          transform: rotate(-40deg);
+  width: 150px;
+  height: 100px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  top: 10%;
+  right: 0%;
+  -webkit-animation: fireball__two 2.5s linear infinite;
+          animation: fireball__two 2.5s linear infinite;
+}
+
+@-webkit-keyframes fireball__two {
+  from {
+    top: 0%;
+    right: 20%;
+  }
+  to {
+    top: 80%;
+    right: 70%;
+  }
+}
+
+@keyframes fireball__two {
+  from {
+    top: 0%;
+    right: 20%;
+  }
+  to {
+    top: 80%;
+    right: 70%;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
