added reducer and datalayer js files

--- a/backend/frontend/src/styles/_fireball.scss
+++ b/backend/frontend/src/styles/_fireball.scss
@@ -5,6 +5,7 @@
     position: fixed;
     width: 100px;
     height: 100px;
+    transform: rotate(-40deg);
     object-fit: contain;
     top: 10%;
     right: 0%;
