added stop enemy animation on certain x value

--- a/backend/frontend/src/styles/_enemies.scss
+++ b/backend/frontend/src/styles/_enemies.scss
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     bottom: 8%;
     right: 0%;
-    animation: enemySlide 5s infinite linear;
+    // animation: enemySlide 5s infinite linear;
 }
 
 @keyframes enemySlide {
