Added left and right movement

--- a/backend/frontend/src/styles/_player.scss
+++ b/backend/frontend/src/styles/_player.scss
@@ -8,7 +8,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     bottom: 8%;
-    left: 10%;
+    // left: 100px;
 }
 
 @keyframes jump {
