added fireball impact and platform context

--- a/backend/frontend/src/styles/_fireball.scss
+++ b/backend/frontend/src/styles/_fireball.scss
@@ -1,15 +1,12 @@
-.fireball_one {
+.fireball {
     background-image: url('../images/fireball-removebg-preview.png');
     background-size: contain;
     background-repeat: no-repeat;
     position: fixed;
-    width: 100px;
-    height: 100px;
     transform: rotate(-40deg);
     object-fit: contain;
     top: 10%;
     right: 0%;
-    animation: fireball__one 3s linear infinite;
 }
 
 @keyframes fireball__one {
@@ -21,20 +18,6 @@
         top: 85%;
         right: 60%;
     }
-}
-
-.fireball_two {
-    background-image: url('../images/fireball-removebg-preview.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: fixed;
-    transform: rotate(-40deg);
-    width: 150px;
-    height: 100px;
-    object-fit: contain;
-    top: 10%;
-    right: 0%;
-    animation: fireball__two 2.5s linear infinite;
 }
 
 @keyframes fireball__two {
