--- a/backend/frontend/src/styles/styles.css
+++ b/backend/frontend/src/styles/styles.css
@@ -126,7 +126,6 @@
      object-fit: contain;
   background-size: contain;
   background-repeat: no-repeat;
-  bottom: 8%;
 }
 
 @-webkit-keyframes jump {
@@ -150,6 +149,30 @@
   }
   0% {
     bottom: 10%;
+  }
+}
+
+@-webkit-keyframes jumpPlatformLow {
+  0% {
+    bottom: 33%;
+  }
+  50% {
+    bottom: 65%;
+  }
+  0% {
+    bottom: 33%;
+  }
+}
+
+@keyframes jumpPlatformLow {
+  0% {
+    bottom: 33%;
+  }
+  50% {
+    bottom: 65%;
+  }
+  0% {
+    bottom: 33%;
   }
 }
 
@@ -185,21 +208,17 @@
   }
 }
 
-.fireball_one {
+.fireball {
   background-image: url("../images/fireball-removebg-preview.png");
   background-size: contain;
   background-repeat: no-repeat;
   position: fixed;
-  width: 100px;
-  height: 100px;
   -webkit-transform: rotate(-40deg);
           transform: rotate(-40deg);
   -o-object-fit: contain;
      object-fit: contain;
   top: 10%;
   right: 0%;
-  -webkit-animation: fireball__one 3s linear infinite;
-          animation: fireball__one 3s linear infinite;
 }
 
 @-webkit-keyframes fireball__one {
@@ -222,23 +241,6 @@
     top: 85%;
     right: 60%;
   }
-}
-
-.fireball_two {
-  background-image: url("../images/fireball-removebg-preview.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  position: fixed;
-  -webkit-transform: rotate(-40deg);
-          transform: rotate(-40deg);
-  width: 150px;
-  height: 100px;
-  -o-object-fit: contain;
-     object-fit: contain;
-  top: 10%;
-  right: 0%;
-  -webkit-animation: fireball__two 2.5s linear infinite;
-          animation: fireball__two 2.5s linear infinite;
 }
 
 @-webkit-keyframes fireball__two {
