added player ability to land on platforms

--- a/backend/frontend/src/styles/_platforms.scss
+++ b/backend/frontend/src/styles/_platforms.scss
@@ -1,6 +1,7 @@
 .platform {
     position: fixed;
     width: 20vw;
+    min-width: 150px;
     height: 5vh;
     background-color: brown;
     border-radius: 10px;
