--- a/backend/frontend/src/styles/_player.scss
+++ b/backend/frontend/src/styles/_player.scss
@@ -34,11 +34,15 @@
     }
 }
 
-@keyframes fallFromPlatformLow {
+@keyframes jumpPlatformHigh {
     0% {
-        bottom: 33%
+        bottom: 63%
+    }
+    50% {
+        bottom: 80% 
     }
     100% {
-        bottom: 8% 
+        bottom: 63%
     }
+    
 }
