--- a/backend/frontend/src/styles/styles.css
+++ b/backend/frontend/src/styles/styles.css
@@ -177,21 +177,27 @@
   }
 }
 
-@-webkit-keyframes fallFromPlatformLow {
+@-webkit-keyframes jumpPlatformHigh {
   0% {
-    bottom: 33%;
+    bottom: 63%;
+  }
+  50% {
+    bottom: 80%;
   }
   100% {
-    bottom: 8%;
+    bottom: 63%;
   }
 }
 
-@keyframes fallFromPlatformLow {
+@keyframes jumpPlatformHigh {
   0% {
-    bottom: 33%;
+    bottom: 63%;
+  }
+  50% {
+    bottom: 80%;
   }
   100% {
-    bottom: 8%;
+    bottom: 63%;
   }
 }
 
@@ -232,8 +238,8 @@
   background-size: contain;
   background-repeat: no-repeat;
   position: fixed;
-  -webkit-transform: rotate(-40deg);
-          transform: rotate(-40deg);
+  -webkit-transform: rotate(-80deg);
+          transform: rotate(-80deg);
   -o-object-fit: contain;
      object-fit: contain;
   top: 10%;
